--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ pytest-cov = ""
 rope = ""
 
 [tool.poetry.scripts]
-properties-diff = 'properties_diff.cli:run'
+properties-diff = 'properties_diff.diff:run'
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
