--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ rope = ""
 
 [tool.poetry.scripts]
 properties-diff = 'properties_diff.diff:run'
+properties-patch = 'properties_diff.patch:run'
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
