--- a/.github/workflows/poetry.yml
+++ b/.github/workflows/poetry.yml
@@ -7,6 +7,9 @@ jobs:
   test:
     name: Build and test App
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["3.7", "3.8", "3.9", "3.10"]
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python
