--- a/.github/workflows/poetry.yml
+++ b/.github/workflows/poetry.yml
@@ -12,10 +12,10 @@ jobs:
         python-version: ["3.7", "3.8", "3.9", "3.10"]
     steps:
       - uses: actions/checkout@v2
-      - name: Set up Python
+      - name: Set up Python ${{ matrix.python }}
         uses: actions/setup-python@v2
         with:
-          python-version: '3.9'
+          python-version: ${{ matrix.python }}
       - name: Install poetry
         run: pip install poetry
       - name: Build app
@@ -37,7 +37,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.9'
+          python-version: "3.9"
       - name: Install poetry
         run: pip install poetry
       - name: Publish app
