--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,9 @@
             "source.organizeImports": true,
         },
     },
+    "[markdown]": {
+        "editor.formatOnSave": true,
+    },
     "python.pythonPath": ".venv/bin/python",
     "python.formatting.provider": "black",
     "python.linting.pylintEnabled": true,
